crates/brasa_parser/tests/snapshots/precedence__lambda_zero_params_oror.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let f = || 42\")"
---
Let f
  Lambda()
    Int(42)
