crates/brasa_parser/tests/snapshots/precedence__newline_leading_dot_continuation.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"value\\n  .trim()\\n  .toUpper()\")"
---
Call
  Field(toUpper)
    Call
      Field(trim)
        Ident(value)
