crates/brasa_parser/tests/snapshots/precedence__newline_multiline_call_args.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"f(\\n  a,\\n  b,\\n  c\\n)\")"
---
Call
  Ident(f)
  Ident(a)
  Ident(b)
  Ident(c)
