crates/brasa_parser/tests/snapshots/precedence__parens_after_a_callee_stay_a_call_not_a_tuple_argument.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"puts (1, 2)\\nputs((1, 2))\")"
---
Call
  Ident(puts)
  Int(1)
  Int(2)
Call
  Ident(puts)
  TupleLit
    Int(1)
    Int(2)
