crates/brasa_parser/tests/snapshots/precedence__prec_coalesce_binds_looser_than_or.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"x ?? y || z\")"
---
Coalesce
  Ident(x)
  Binary(||)
    Ident(y)
    Ident(z)
