crates/brasa_parser/tests/snapshots/precedence__prec_coalesce_gap_still_parses_surrounding_or.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "brasa_parser::dump::dump(&result.ast, &result.roots)"
---
Ident(x)
