crates/brasa_parser/tests/snapshots/precedence__prec_coalesce_left_assoc_chain.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"x ?? y ?? z\")"
---
Coalesce
  Coalesce
    Ident(x)
    Ident(y)
  Ident(z)
